crates/plugin/src/model_plugin/tests/snapshots/nitrogql_plugin__model_plugin__tests__checker__model_with_type_on_fields.snap
---
source: crates/plugin/src/model_plugin/tests/mod.rs
expression: errors
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 12,
            file: 0,
            builtin: false,
        },
        message: Plugin {
            message: "'type' parameter cannot be used on fields",
        },
        additional_info: [],
    },
    CheckError {
        position: Pos {
            line: 3,
            column: 18,
            file: 0,
            builtin: false,
        },
        message: Plugin {
            message: "'type' parameter cannot be used on fields",
        },
        additional_info: [],
    },
]
