crates/plugin/src/model_plugin/tests/snapshots/nitrogql_plugin__model_plugin__tests__checker__model_without_type_on_object_type.snap
---
source: crates/plugin/src/model_plugin/tests/mod.rs
expression: errors
---
[
    CheckError {
        position: Pos {
            line: 1,
            column: 10,
            file: 0,
            builtin: false,
        },
        message: Plugin {
            message: "'type' parameter is required",
        },
        additional_info: [],
    },
    CheckError {
        position: Pos {
            line: 8,
            column: 10,
            file: 0,
            builtin: false,
        },
        message: Plugin {
            message: "'type' parameter is required",
        },
        additional_info: [],
    },
]
